fixed bud on mobile navbar

--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,7 @@ p {
     padding-right: 15px;
     padding-bottom: 15px;
     width: 100%;
-    height: 40%;
+    height: 50%;
     background-color: rgba(242, 242, 242, 0.8);
   }
   .navbar #navbarResponsive.collapsing {
