--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -56,7 +56,7 @@
       padding-right: 15px;
       padding-bottom: 15px;
       width: 100%;
-      height: 40%;
+      height: 50%;
       background-color: rgba(242, 242, 242, 0.8);
 
       &.collapsing {
